# RBQT_communication

./: README.md  stack.xml
RBQT_communication/: CMakeLists.txt  package.xml
refBoxComm/: CMakeLists.txt  manifest.xml  package.xml
refBoxComm/cfg/: config.yaml
refBoxComm/src/: refBoxCommNode.cpp  refBoxTransport.cpp
robocup_manager/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
robocup_manager/include/: Controller.h
robocup_manager/include/arenaState/: ArenaState.h
robocup_manager/include/arenaState/actors/: Actor.h  Machine.h  Puck.h  Robotino.h
robocup_manager/include/arenaState/zones/: InputStorage.h  MachineStorage.h  Zone.h
robocup_manager/include/gameState/: GeneralGameStatus.h
robocup_manager/include/tasks/: AbstractTask.h  ComposedTask.h  SimpleTask.h
robocup_manager/include/tasks/basicTasks/: GoToTask.h  IdentifyMachineTypeTask.h  ReportMachineTask.h
robocup_manager/include/tasks/explorationTask/: ExploreMachineTask.h
robocup_manager/include/utils/: geometry_utils.h
robocup_manager/launch/: allUtilNodes.launch  robocup_manager.launch
robocup_manager/src/: Controller.cpp  robocupManagerNode.cpp
robocup_manager/src/arenaState/: ArenaState.cpp
robocup_manager/src/arenaState/actors/: Actor.cpp  Machine.cpp  Puck.cpp  Robotino.cpp
robocup_manager/src/arenaState/zones/: InputStorage.cpp  MachineStorage.cpp  Zone.cpp
robocup_manager/src/gameState/: GeneralGameStatus.cpp
robocup_manager/src/tasks/: AbstractTask.cpp  ComposedTask.cpp  SimpleTask.cpp
robocup_manager/src/tasks/basicTasks/: GoToTask.cpp  IdentifyMachineTypeTask.cpp  ReportMachineTask.cpp
robocup_manager/src/tasks/explorationTask/: ExploreMachineTask.cpp
robocup_manager/src/utils/: geometry_utils.cpp
